--- a/src/main/resources/assets/oedldoedlexplosives/lang/en_us.lang
+++ b/src/main/resources/assets/oedldoedlexplosives/lang/en_us.lang
@@ -2,7 +2,7 @@
 itemGroup.oedldoedlexplosives.name=§dOedldoedl Explosives
 
 # icons
-item.oedldoedlcore.explosives_icon.annotation3=Version: §e1.12.2-4.0.0
+item.oedldoedlcore.explosives_icon.annotation3=Version: §e1.12.2-4.1.0
 
 # blocks
 tile.oedldoedlexplosives.rainbow_block.name=Rainbow Block
@@ -160,10 +160,6 @@ tile.oedldoedlexplosives.cubic_tnt.name=Cubic TNT
 entity.oedldoedlexplosives.cubic_tnt.name=Block of Cubic TNT
 tile.oedldoedlexplosives.cubic_tnt.tip1=Removes everything without even asking.
 
-tile.oedldoedlexplosives.over_9000_tnt.name=Over 9000 TNT
-entity.oedldoedlexplosives.over_9000_tnt.name=Block of Over 9000 TNT
-tile.oedldoedlexplosives.over_9000_tnt.tip1=And this... is... to go... even further beyond!
-
 tile.oedldoedlexplosives.tnt_tree.name=TNT Tree
 entity.oedldoedlexplosives.tnt_tree.name=Block of TNT Tree
 tile.oedldoedlexplosives.tnt_tree.tip1=Also known as TreeNT.
@@ -195,6 +191,18 @@ tile.oedldoedlexplosives.tnt_firework.tip1=...and a happy new year!
 tile.oedldoedlexplosives.entity_firework.name=Entity Firework
 entity.oedldoedlexplosives.entity_firework.name=Block of TNT Entity
 tile.oedldoedlexplosives.entity_firework.tip1=...and a happy new year?
+
+tile.oedldoedlexplosives.multiply_tnt.name=Multiply TNT
+entity.oedldoedlexplosives.multiply_tnt.name=Block of Multiply TNT
+tile.oedldoedlexplosives.multiply_tnt.tip1=Yes, it does work with Diamond Blocks...
+
+tile.oedldoedlexplosives.grove_tnt.name=Grove TNT
+entity.oedldoedlexplosives.grove_tnt.name=Block of Grove TNT
+tile.oedldoedlexplosives.grove_tnt.tip1=#TeamTrees
+
+tile.oedldoedlexplosives.over_9000_tnt.name=Over 9000 TNT
+entity.oedldoedlexplosives.over_9000_tnt.name=Block of Over 9000 TNT
+tile.oedldoedlexplosives.over_9000_tnt.tip1=And this... is... to go... even further beyond!
 
 tile.oedldoedlexplosives.thep2wking_tnt.name=TheP2WKing TNT
 entity.oedldoedlexplosives.thep2wking_tnt.name=Block of TheP2WKing TNT
